stopped images being pulled up behind the inside of the hero rotator carousel image slidey thingamybob maggicket

--- a/app/assets/stylesheets/website/featured_section.scss
+++ b/app/assets/stylesheets/website/featured_section.scss
@@ -379,12 +379,6 @@
     article.news_article {
       .img {
         overflow: hidden;
-
-        img {
-          @media only screen and (min-width: 768px) {
-            margin-top: -5%;
-          }
-        }
       }
     }
 
